<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify_aadhaar"
            android:textColor="@color/textcolor1"
            android:textSize="30sp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="75dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/enter_otp_to_the_mobile_number_n_linked_with_your_aadhaar_91_xxx_xxx_x_780"
            android:textColor="@color/textcolor2"
            android:textSize="18sp"
            android:layout_gravity="center"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:paddingRight="25dp"
            android:paddingLeft="25dp"
            android:orientation="horizontal">

            <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/white"
                android:layout_height="60dp"
                android:focusable="true"
                android:inputType="number"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="bold"
                android:maxLength="1"/>

            <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/white"
                android:layout_height="60dp"
                android:focusable="true"
                android:layout_marginStart="8dp"
                android:inputType="number"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="bold"
                android:maxLength="1"/>

            <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/white"
                android:layout_height="60dp"
                android:focusable="true"
                android:layout_marginStart="8dp"
                android:inputType="number"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="bold"
                android:maxLength="1"/>

            <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/white"
                android:layout_height="60dp"
                android:focusable="true"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="30sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginStart="8dp"/>

            <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/white"
                android:layout_height="60dp"
                android:focusable="true"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginStart="8dp"/>

            <EditText
                android:layout_weight="1"
                android:layout_width="0dp"
                android:background="@color/white"
                android:layout_height="60dp"
                android:focusable="true"
                android:inputType="number"
                android:maxLength="1"
                android:textSize="30sp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginStart="8dp"/>



        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resend_otp_in_30_secs"
            android:textColor="@color/textcolor2"
            android:textSize="20sp"
            android:layout_marginTop="30dp"
            android:gravity="center" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_91_xxx_xxx_x780"
            android:textColor="@color/textcolor3"
            android:textSize="25sp"
            android:layout_marginTop="65dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/use_this_option_to_verfiy_aadhaar_manually"
            android:textColor="@color/textcolor4"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:gravity="center"/>

    </LinearLayout>

</RelativeLayout>
    android:orientation="vertical"
    tools:context=".j.DL1MainActivity">


</LinearLayout>
